# chaos

./: .travis.yml  Cargo.toml  README.md  build.rs
scripts/: chaos.zsh
src/: common.rs  data.rs  data.rs.in  lib.rs.in  main.rs  model.rs  model.rs.in
