[package]
name = "chaos"
version = "0.9.4"
description = "Password metadata storage and xsalsa20 hasher"
repository = "https://github.com/vegai/chaos"
license = "Unlicense"
readme = "README.md"
keywords = ["hasher", "password", "security", "simple", "cli"]
authors = ["vegai@iki.fi"]

[dependencies]
clippy = {version = "*", optional = true}
rust-crypto = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.5"
shellexpand = "1.0"
clap = "2"
base64 = "0.9"

[features]
default = []
